[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/icon/squad_icon/icon_empty.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/icon/squad_icon/squad_icon.gd" type="Script" id=3]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/input_detection.tscn" type="PackedScene" id=4]

[node name="squad_icon" type="MarginContainer"]
margin_right = 85.0
margin_bottom = 160.0
rect_min_size = Vector2( 85, 160 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 85.0
margin_bottom = 160.0
mouse_filter = 2

[node name="Frame" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Frame2" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
mouse_filter = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2"]
margin_right = 85.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer2"]
margin_top = 5.0
margin_right = 85.0
margin_bottom = 119.0
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer"]
margin_right = 1.0
margin_bottom = 114.0
rect_min_size = Vector2( 1, 0 )
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer2/HBoxContainer"]
margin_left = 5.0
margin_right = 80.0
margin_bottom = 114.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2/HBoxContainer"]
margin_left = 84.0
margin_right = 85.0
margin_bottom = 114.0
rect_min_size = Vector2( 1, 0 )
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer2"]
margin_top = 123.0
margin_right = 85.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2

[node name="Control" type="Control" parent="Control/VBoxContainer2/MarginContainer2"]
margin_right = 85.0
margin_bottom = 37.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer2/MarginContainer2/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.643137 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer2/MarginContainer2"]
margin_right = 85.0
margin_bottom = 37.0
mouse_filter = 2
alignment = 2

[node name="Label" type="Label" parent="Control/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_right = 85.0
margin_bottom = 28.0
grow_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "26"
align = 1
valign = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_top = 32.0
margin_right = 85.0
margin_bottom = 37.0
rect_min_size = Vector2( 5, 5 )

[node name="Frame3" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0, 0, 0 )

[node name="input_detection" parent="." instance=ExtResource( 4 )]

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="." to="." method="_on_squad_icon_gui_input"]
[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
